<resources>
    <string name="app_name">BasicProgram</string>
    <string name="subscription">Subscription</string>
    <string name="get_unlimited_access">Get unlimited \naccess!</string>
    <string name="go_premium">Go Premium</string>
    <string name="_10">  -10%  </string>
    <string name="_3_99_per_month">$3,99 per month</string>
    <string name="_3_99">$3,99</string>
    <string name="_80_per_year">$80 per year</string>
    <string name="_9_99_per_month">$9,99 per month</string>
    <string name="_9_99">$9,99</string>
    <string name="at_least_8_characters">at least 8 characters</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="leslie_alexander">Leslie Alexander</string>
    <string name="name">Name</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="_60_per_year">$60 per year</string>

    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="percent">%</string>
    <string name="bracket">(    )</string>
    <string name="ac">AC</string>


    <string name="search">Search</string>
    <string name="gm">Good Morning Chirag</string>
    <string name="exercises">Exercises</string>
    <string name="setting">Setting</string>
    <string name="today">Today</string>
    <string name="upload">upload</string>
    <string name="discard">Discard</string>
    <string name="singapore">Singapore</string>
    <string name="camera">Camera</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="meditation">Meditation</string>
    <string name="yoga">Yoga</string>
    <string name="_12k">12k</string>
    <string name="_542">542</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="john_fred">John Fred</string>
    <string name="_3_posts">3 POSTS</string>
    <string name="_8_photos">8 photos</string>


    <string name="underline_sign_up"><u> Sign up</u></string>
    <string name="already_account">Already have an account?</string>
    <string name="maria">\@mariajordan01</string>
    <string name="follow">Follow</string>
    <string name="like">Like</string>
    <string name="_2_3_m">2.3 M</string>
    <string name="_50_5k">50.5k</string>
    <string name="_99">99</string>
    <string name="follower">Follower</string>
    <string name="maria_jorden">Maria Jorden</string>
    <string name="photos">Photos</string>

    <string-array name="order">
        <item>Ascending</item>
        <item>Descending</item>
        <item>Category</item>
    </string-array>

    <string name="product">Product</string>
    <string name="product_details">Product Details</string>
    <string name="add_new_product">Add New Product</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="title_error">Please Enter title</string>
    <string name="price_error">Please Enter price</string>
    <string name="description_error">Please Enter Description</string>
    <string name="category_error">Please Select any Category</string>
</resources>