<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/main_border"
    android:elevation="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        android:textColor="@color/medium_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle"
        android:padding="2dp"
        android:src="@drawable/ic_close"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@id/txtSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/border1"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/medium_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSignUp" />


    <ImageView
        android:id="@+id/imgGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:src="@drawable/ic_gmail"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/txtBorder"
        app:layout_constraintStart_toStartOf="@id/txtBorder"
        app:layout_constraintTop_toTopOf="@id/txtBorder" />


    <View
        android:id="@+id/view"
        android:layout_width="320dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/line"
        app:layout_constraintTop_toBottomOf="@id/txtBorder" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:inputType="text"
        android:hint="@string/leslie_alexander"
        app:layout_constraintTop_toBottomOf="@id/txtName" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleText"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/txtEmail" />

    <TextView
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleText"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:inputType="textPassword"
        android:hint="@string/at_least_8_characters"
        android:drawableEnd="@drawable/ic_password"
        app:layout_constraintTop_toBottomOf="@id/txtPass" />


    <View
        android:id="@+id/view1"
        android:layout_width="80dp"
        android:layout_height="3dp"
        style="@style/Multiline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPass" />

    <View
        android:id="@+id/view2"
        android:layout_width="80dp"
        android:layout_height="3dp"
        style="@style/Multiline"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/etPass" />

    <View
        android:id="@+id/view3"
        android:layout_width="80dp"
        android:layout_height="3dp"
        style="@style/Multiline"
        app:layout_constraintStart_toEndOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@id/etPass" />

    <View
        android:id="@+id/view4"
        android:layout_width="80dp"
        android:layout_height="3dp"
        style="@style/Multiline"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toEndOf="@id/view3"
        app:layout_constraintTop_toBottomOf="@id/etPass" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/txtCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/txtCondition" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="320dp"
        android:layout_height="1dp"
        style="@style/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/log_in"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>