<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/sign_up_blue">



        <ImageView
                android:id="@+id/img_navigation_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_menu"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underline_sign_up"
            android:textColor="@color/white"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="22dp"
            android:textSize="15sp"/>

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/first_screen" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_username"
        android:layout_marginTop="25dp"
        android:hint="@string/name"
        style="@style/EditTextStyle"/>


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_gmail"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        style="@style/EditTextStyle"/>



    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/EditTextStyle"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonLinear"/>


    <TextView
        android:id="@+id/txt_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       style="@style/TextViewLinear"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonLinear1"/>
</LinearLayout>